refactor to simplified code and eliminate warnings